# wdpe

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt  main.cpp
include/wdpe/: common.hpp  exceptions.hpp  pe.hpp  wdpe.hpp  wdpe_inl.hpp
include/wdpe/detail/auth_signature/: auth_signature.hpp
include/wdpe/detail/crypto/: checksum.hpp
include/wdpe/detail/payload/: payload.hpp  wdpe_payload.hpp
include/wdpe/detail/pe/: pe_parser.hpp  utils.hpp
include/wdpe/detail/utils/: file_utils.hpp
src/: wdpe.cpp
tests/: CMakeLists.txt  conanfile.txt  main.cpp
tests/wdpe/: wdpe_test.cpp  wdpe_test.hpp
